--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><strong>2023</strong></a>           
         <div class="dropdown-menu">  
             <a href="./2023/janvier.html"><b><ul><li>janvier</li></ul></b></a>
-            <a href=""><b><ul><li>fevrier</li></ul></b></a>
-            <a href=""><b><ul><li>mars</li></ul></b></a>
-            <a href=""><b><ul><li>avril</li></ul></b></a>
-            <a href=""><b><ul><li>mai</li></ul></b></a>
-            <a href=""><b><ul><li>juin</li></ul></b></a> 
-            <a href=""><b><ul><li>janvier</li></ul></b></a>
-            <a href=""><b><ul><li>fevrier</li></ul></b></a>
-            <a href=""><b><ul><li>mars</li></ul></b></a>
-            <a href=""><b><ul><li>avril</li></ul></b></a>
-            <a href=""><b><ul><li>mai</li></ul></b></a>
-            <a href=""><b><ul><li>juin</li></ul></b></a>  
+          <a href="./2023/fevrier.html"><b><ul><li>fevrier</li></ul></b></a>
+          <a href="./2023/mars.html"><b><ul><li>mars</li></ul></b></a>
+          <a href="./2023/avril.html"><b><ul><li>avril</li></ul></b></a>
+          <a href="./2023/mai.html"><b><ul><li>mai</li></ul></b></a>
+          <a href="./2023/juin.html"><b><ul><li>juin</li></ul></b></a> 
+          <a href="./2023/juillet.html"><b><ul><li>juillet</li></ul></b></a>
+          <a href="./2023/aout.html"><b><ul><li>aout</li></ul></b></a>
+          <a href="./2023/septembre.html"><b><ul><li>septembre</li></ul></b></a>
+          <a href="./2023/octobre.html"><b><ul><li>octobre</li></ul></b></a>
+          <a href="./2023/novembre.html"><b><ul><li>novembre</li></ul></b></a>
+          <a href="./2023/decembre.html"><b><ul><li>décembre</li></ul></b></a>  
         </div>
       </div>
       <div class="btn-group">           
@@ -53,29 +53,29 @@
             <a href=""><b><ul><li>avril</li></ul></b></a>
             <a href=""><b><ul><li>mai</li></ul></b></a>
             <a href=""><b><ul><li>juin</li></ul></b></a> 
-            <a href=""><b><ul><li>janvier</li></ul></b></a>
-            <a href=""><b><ul><li>fevrier</li></ul></b></a>
-            <a href=""><b><ul><li>mars</li></ul></b></a>
-            <a href=""><b><ul><li>avril</li></ul></b></a>
-            <a href=""><b><ul><li>mai</li></ul></b></a>
-            <a href=""><b><ul><li>juin</li></ul></b></a>  
+            <a href=""><b><ul><li>juillet</li></ul></b></a>
+            <a href=""><b><ul><li>aout</li></ul></b></a>
+            <a href=""><b><ul><li>septembre</li></ul></b></a>
+            <a href=""><b><ul><li>octobre</li></ul></b></a>
+            <a href=""><b><ul><li>novembre</li></ul></b></a>
+            <a href=""><b><ul><li>décembre</li></ul></b></a>  
         </div>
       </div>
       <div class="btn-group">           
         <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><strong>2025</strong></a>           
         <div class="dropdown-menu">  
-            <a href=""><b><ul><li>janvier</li></ul></b></a>
-            <a href=""><b><ul><li>fevrier</li></ul></b></a>
-            <a href=""><b><ul><li>mars</li></ul></b></a>
-            <a href=""><b><ul><li>avril</li></ul></b></a>
-            <a href=""><b><ul><li>mai</li></ul></b></a>
-            <a href=""><b><ul><li>juin</li></ul></b></a> 
-            <a href=""><b><ul><li>janvier</li></ul></b></a>
-            <a href=""><b><ul><li>fevrier</li></ul></b></a>
-            <a href=""><b><ul><li>mars</li></ul></b></a>
-            <a href=""><b><ul><li>avril</li></ul></b></a>
-            <a href=""><b><ul><li>mai</li></ul></b></a>
-            <a href=""><b><ul><li>juin</li></ul></b></a>  
+          <a href=""><b><ul><li>janvier</li></ul></b></a>
+          <a href=""><b><ul><li>fevrier</li></ul></b></a>
+          <a href=""><b><ul><li>mars</li></ul></b></a>
+          <a href=""><b><ul><li>avril</li></ul></b></a>
+          <a href=""><b><ul><li>mai</li></ul></b></a>
+          <a href=""><b><ul><li>juin</li></ul></b></a> 
+          <a href=""><b><ul><li>juillet</li></ul></b></a>
+          <a href=""><b><ul><li>aout</li></ul></b></a>
+          <a href=""><b><ul><li>septembre</li></ul></b></a>
+          <a href=""><b><ul><li>octobre</li></ul></b></a>
+          <a href=""><b><ul><li>novembre</li></ul></b></a>
+          <a href=""><b><ul><li>décembre</li></ul></b></a> 
         </div>
       </div>
       <a class="navbar-brand" href="#"></a>
@@ -91,5 +91,5 @@
     <header style="background: linear-gradient(to right, red, blue, green )"><h1 style="text-align: center;">BIENVENUE</h1></header>
 
 </body>
-<footer><h2> © Copyright by hyacinthe 2023 | All Rights Reserved </h2></footer>
+<footer><h5> © Copyright by hyacinthe 2023 | All Rights Reserved </h5></footer>
 </html>
