--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Library Management System</title>
+    <title>%PRO|-|JET%</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body style="text-align: center;">
