--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     
   </nav>
     <header style="background: linear-gradient(to right, red, blue, green )"><h1 style="text-align: center;">BIENVENUE</h1>
-        <h3>si vous avez une reclémation <a href="./blog.html">cliquer ici</a></h3>
+      <p>.</p> <h3>si vous avez une reclémation <a href="./blog.html">cliquer ici</a></h3>
     </header>
   <P>.</P>
   <p>.</p>
