--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <div class="dropdown-menu">  
           <a href="./2024/janvier/index.html"><b><ul><li>janvier</li></ul></b></a>
           <a href="./2024/fevrier/index.html"><b><ul><li>fevrier</li></ul></b></a>
-          <a href="./2024/mars/index.html.html"><b><ul><li>mars</li></ul></b></a>
+          <a href="./2024/mars/index.html"><b><ul><li>mars</li></ul></b></a>
           <a href="./2024/avril/index.html"><b><ul><li>avril</li></ul></b></a>
           <a href="./2024/mai/index.html"><b><ul><li>mai</li></ul></b></a>
           <a href="./2024/juin/index.html"><b><ul><li>juin</li></ul></b></a> 
           <a href="./2024/juillet/index.html"><b><ul><li>juillet</li></ul></b></a>
-          <a href="./2024/aout./index.html"><b><ul><li>aout</li></ul></b></a>
+          <a href="./2024/aout/index.html"><b><ul><li>aout</li></ul></b></a>
           <a href="./2024/septembre/index.html"><b><ul><li>septembre</li></ul></b></a>
           <a href="./2024/octobre/index.html"><b><ul><li>octobre</li></ul></b></a>
           <a href="./2024/novembre/index.html"><b><ul><li>novembre</li></ul></b></a>
