--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </nav>
     <header style="background: linear-gradient(to right, red, blue, green )"><h1 style="text-align: center;">BIENVENUE</h1>
       <p>.</p> <h4>si vous avez une réclamation <a href="./blog.html">cliquer ici</a></h4>
-    <h2> <a href="./cheelee.html"></href></h2>
+    <h2> <a href="./cheelee.html">cheelee</a></h2>
     
     </header>
   <P>.</P>
