--- a/2024 C+S/octobre/index.html
+++ b/2024 C+S/octobre/index.html
@@ -82,7 +82,7 @@
   <tr>
       <td style="text-align: center;"><strong ></strong></td>
     <td style="text-align: center;"><strong>TOTAL</strong></td>
-    <td style="text-align: center;"><strong >250</strong></td>
+    <td style="text-align: center;"><strong id="index"></strong></td>
     <td style="text-align: center;"><strong id="index"></strong></td>
     <td style="text-align: center;"><strong id="nattotal"></strong></td>
     <td style="text-align: center;"><strong id="payertotal"></strong></td>
@@ -117,8 +117,8 @@
   <tr>
       <td style="text-align: center;"><strong ></strong></td>
     <td style="text-align: center;"><strong>TOTAL</strong></td>
-    <td style="text-align: center;"><strong >400</strong></td>
-    <td style="text-align: center;"><strong id="eindex"></strong></td>
+    <td style="text-align: center; "><strong  ><a id="eindex"></a></strong></td>
+    <td style="text-align: center;"></td>
     <td style="text-align: center;"><strong id="enattotal"></strong></td>
     <td style="text-align: center;"><strong id="epayertotal"></strong></td>
     <td style="text-align: center;"><strong id="erestetotal"></strong></td>
@@ -129,7 +129,7 @@
   <div><h2  style="text-align: center; background-color: blueviolet; color: antiquewhite;"><strong id="mois"></strong></h2></div>
   <P></P>
   <div class="lien">
-    <h4 id="affiche" style="text-align: right;"> <a   style="background-color: rgb(255, 0, 0);" ><b style="color: rgb(0, 0, 0);"> reçu no disponible <img src="./IMG/tele.svg"></b></a></h4>
+    <h4 id="affiche" style="text-align: right;"> <a   style="background-color: rgb(255, 0, 0);" ><b style="color: rgb(0, 0, 0);"> pas de reçu disponible <img src="./IMG/tele.svg"></b></a></h4>
   </div>
   <script src="mois.js"></script>
   <p> .</p>
