--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <div class="btn-group">           
         <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><strong>2025</strong></a>           
         <div class="dropdown-menu">  
-          <a href="./2023/aout.html"><b><ul><li>janvier</li></ul></b></a>
-          <a href="./2023/fevrier.html"><b><ul><li>fevrier</li></ul></b></a>
+          <a href="./2025/janvier/index.html"><b><ul><li>janvier</li></ul></b></a>
+          <a href="./2025/fevrier.html"><b><ul><li>fevrier</li></ul></b></a>
           <a href="./2023/mars.html"><b><ul><li>mars</li></ul></b></a>
           <a href="./2023/avril.html"><b><ul><li>avril</li></ul></b></a>
           <a href="./2023/mai.html"><b><ul><li>mai</li></ul></b></a>
