--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><strong>2025</strong></a>           
         <div class="dropdown-menu">  
           <a href="./2025/janvier/index.html"><b><ul><li>janvier</li></ul></b></a>
-          <a href="./2025/fevrier.html"><b><ul><li>fevrier</li></ul></b></a>
-          <a href="./2023/mars.html"><b><ul><li>mars</li></ul></b></a>
-          <a href="./2023/avril.html"><b><ul><li>avril</li></ul></b></a>
-          <a href="./2023/mai.html"><b><ul><li>mai</li></ul></b></a>
-          <a href="./2023/juin.html"><b><ul><li>juin</li></ul></b></a> 
-          <a href="./2023/juillet.html"><b><ul><li>juillet</li></ul></b></a>
-          <a href="./2023/aout.html"><b><ul><li>aout</li></ul></b></a>
-          <a href="./2023/septembre.html"><b><ul><li>septembre</li></ul></b></a>
-          <a href="./2023/octobre.html"><b><ul><li>octobre</li></ul></b></a>
-          <a href="./2023/novembre.html"><b><ul><li>novembre</li></ul></b></a>
-          <a href="./2023/decembre.html"><b><ul><li>décembre</li></ul></b></a> 
+          <a href="./2025/fevrier/index.html"><b><ul><li>fevrier</li></ul></b></a>
+          <a href="./2025/mars/index.html"><b><ul><li>mars</li></ul></b></a>
+          <a href="./2025/avril/index.html"><b><ul><li>avril</li></ul></b></a>
+          <a href="./2025/mai/index.html"><b><ul><li>mai</li></ul></b></a>
+          <a href="./2025/juin/index.html"><b><ul><li>juin</li></ul></b></a> 
+          <a href="./2025/juillet/index.html"><b><ul><li>juillet</li></ul></b></a>
+          <a href="./2025/aout/index.html"><b><ul><li>aout</li></ul></b></a>
+          <a href="./2025/septembre/index.html"><b><ul><li>septembre</li></ul></b></a>
+          <a href="./2025/octobre/index.html"><b><ul><li>octobre</li></ul></b></a>
+          <a href="./2025/novembre/index.html"><b><ul><li>novembre</li></ul></b></a>
+          <a href="./2025/decembre/index.html"><b><ul><li>décembre</li></ul></b></a> 
         </div>
       </div>
       <a class="navbar-brand" href="#"></a>
